add format user to GET team, UPDATE team
